# gany

./: CONTRIBUTING.md  Cargo.toml  NOTICE  README  SECURITY.md  crates.js  help.html  rust-toolchain  search-index.js  settings.html  snapcraft.yaml  source-files.js  src-files.js
.cargo/: config  config.toml
.github/workflows/: aarch64.yml  aur.yml  coverage.yml  deb.yml  fix_code.yml  format_code.yml  gh-pages.yml  lint_code.yml  mac-apple.yml  mac-intel.yml  publish_crate.yml  rpm.yml  windows.yml  x86_64.yml
.github/workflows_old/: aarch64.yml  coverage.yml  format_code.yml  gh-pages.yml  lint_code.yml  mac-intel.yml  windows.yml
gany/: all.html  constant.FIELDS.html  derive.Deserialize.html  derive.Serialize.html  enum.Option.html  enum.__Field.html  fn.add_package.html  fn.add_repository.html  fn.add_repository_with_url.html  fn.create_package.html  fn.drop_package.html  fn.extract_package.html  fn.load_repositories.html  fn.push_repository.html  fn.refresh_remote_packages.html  fn.sync_repositories.html  fn.upgrade_packages.html  fn.write_file.html  index.html  macro.env.html  sidebar-items.js  struct.BufWriter.html  struct.File.html  struct.Package.html  struct.Path.html  struct.PathBuf.html  struct.Repository.html  struct.__FieldVisitor.html  struct.__Visitor.html  trait.Context.html  trait.Deserialize.html  trait.Digest.html  trait.Serialize.html  trait.TryInto.html  trait.Write.html
gany/env/: enum.VarError.html  fn.args.html  fn.args_os.html  fn.current_dir.html  fn.current_exe.html  fn.home_dir.html  fn.join_paths.html  fn.remove_var.html  fn.set_current_dir.html  fn.set_var.html  fn.split_paths.html  fn.temp_dir.html  fn.var.html  fn.var_os.html  fn.vars.html  fn.vars_os.html  index.html  struct.Args.html  struct.ArgsOs.html  struct.JoinPathsError.html  struct.SplitPaths.html  struct.Vars.html  struct.VarsOs.html
gany/fs/: fn.canonicalize.html  fn.copy.html  fn.create_dir.html  fn.create_dir_all.html  fn.hard_link.html  fn.metadata.html  fn.read.html  fn.read_dir.html  fn.read_link.html  fn.read_to_string.html  fn.remove_dir.html  fn.remove_dir_all.html  fn.rename.html  (+15 more)
src/: error.rs  lib.rs  main.rs  package.rs  repository.rs
(+30 files in other folders)
