#    This file is part of Gany.
#
#    Gany is free software: you can redistribute it and/or modify
#    it under the terms of the GNU Affero General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    Gany is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU Affero General Public License for more details.
#
#    You should have received a copy of the GNU Affero General Public License
#    along with Gany.  If not, see <https://www.gnu.org/licenses/>.
cargo-features = ["strip"]
[package]
name = "gany"
version = "0.1.0"
edition = "2018"
license = "AGPL-3.0-or-later"
description = "Performant package manager written in Rust."
repository = "https://github.com/Dirout/gany"
homepage = "https://github.com/Dirout/gany"
readme = "README"

[lib]
name = "gany"
path = "src/lib.rs"
crate-type=["rlib", "dylib", "staticlib"]

[[bin]]
name = "gany"
path = "src/main.rs"
doc = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
bincode = "1.3.3"
clap = { version = "3.1.6", features = ["suggestions", "color", "wrap_help"] }
dipa = { version = "0.1.1", features = ["derive"] }
glob = "0.3.0"
larz = "0.3.0"
lazy_static = "1.4.0"
lz4_flex = { version = "0.9.2", default-features = false }
mimalloc = { version = "0.1.28", default-features = false }
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
semver = "1.0.6"
serde = "1.0.136"
serde_yaml = "0.8.23"
sha3 = "0.10.1"
stopwatch = "0.0.7"
tar = "0.4.38"
tempfile = "3.5.0"
url = { version = "2.2.2", features = ["serde"] }

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
rpath = false
panic = 'abort'
strip = "symbols"

[profile.release.build-override]
opt-level = 3
codegen-units = 1